--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root{
+    /* root é a caixinha de variáveis */
     --cor-de-fundo:#a9c5ec;
     --texto: #ffffff;
 }
@@ -6,3 +7,4 @@ body{
     background-color: var(--cor-de-fundo);
     color: var(--texto);
 }
+ 
