--- a/style.css
+++ b/style.css
@@ -7,4 +7,7 @@ body{
     background-color: var(--cor-de-fundo);
     color: var(--texto);
 }
- 
+ header{
+    display: flex;
+    align-items: center;
+ }
