--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body{
     background-color: var(--cor-de-fundo);
     color: var(--texto);
 }
+img{
+    widht: 10%
+
+}
+
+
  header{
     display: flex;
     align-items: center;
