--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     /* root é a caixinha de variáveis */
     --cor-de-fundo:#a9c5ec;
     --texto: #ffffff;
-    --cor-rodape: #ffcbdb;
 }
 body{
     background-color: var(--cor-de-fundo);
@@ -46,5 +45,5 @@ img{
  }
  
  .footer{
-   background-color: var(--cor-rodape);
+   background-color: pink;
  }
