--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-    @import url('https://fonts.googleapis.com/css2?family=Sevillana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&family=Sevillana&display=swap');
     
     :root{
 
@@ -7,7 +7,7 @@
     --texto: #ffffff;
 }
 body{
-    font-family: "Sevillana", static;
+    font-family: "Platypi", variable;
     font-optical-sizing: auto;
     font-weight: 400;
     background-color: var(--cor-de-fundo);
