--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ justify-items: center;
    display:grid;
 grid-template-columns: 20% 50% 30%;
 justify-items: center;
+text-align: right;
  }
 
  .primeirojogo{
