--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ img{
 
  .bot{
    display: flex;
-   justify-content: space-between;
+   justify-content: space-evenly;
 
  }
  .intro{
@@ -54,8 +54,10 @@ img{
  }
 
  header a{
-   color: aqua;
-   text-decoration: none;
+   color: white;
+    text-decoration: none;
+    background-color: pink;
+    padding: 0 12px;
  }
  
  .footer{
